--- a/package.json
+++ b/package.json
@@ -10,10 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "add": "^2.0.6",
+    "amfe-flexible": "^2.2.1",
+    "antd-mobile": "^5.33.0",
+    "antd-mobile-icons": "^0.3.0",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "classnames": "^2.3.2",
+    "crypto-js": "^4.2.0",
+    "path": "^0.12.7",
+    "postcss-pxtorem": "^6.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-activation": "^0.12.4",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3",
+    "vconsole": "^3.15.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
+    "@types/node": "^20.10.1",
+    "@types/postcss-pxtorem": "^6.0.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -22,7 +46,9 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-require-transform": "^1.0.21"
   }
 }
