--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^1.9.7",
+    "@videojs-player/react": "^1.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "add": "^2.0.6",
+    "ahooks": "^3.7.8",
     "amfe-flexible": "^2.2.1",
     "antd-mobile": "^5.33.0",
     "antd-mobile-icons": "^0.3.0",
@@ -33,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "vconsole": "^3.15.1",
+    "video.js": "^8.6.1",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
