--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
     "antd-mobile-icons": "^0.3.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "classname": "^0.0.0",
     "classnames": "^2.3.2",
     "crypto-js": "^4.2.0",
+    "i18next": "^23.7.7",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
+    "localforage": "^1.10.0",
     "path": "^0.12.7",
     "postcss-pxtorem": "^6.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-activation": "^0.12.4",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "redux": "^4.2.1",
